Updated bootstrapping
Better handling of things. Checks rt.jar version before continuing.

Still needed: add rt.jar CLI option to JAAM itself.