@@ -4,15 +4,17 @@
 
 NEED_VERSION="1.7"
 MY_DIR="$(cd $(dirname $0); pwd -P)"
-SBT_PATH="${MY_DIR}/bin/sbt"
-SBT_EXEC="./bin/sbt"
-FIND_RT_JAR="${MY_DIR}/bin/find-rt-jar.sh"
+SBT_REL_PATH="bin/sbt"
+SBT_PATH="${MY_DIR}/${SBT_REL_PATH}"
 RUNNER_PATH="${MY_DIR}/jaam.sh"
 
 function info {
     echo -e "[info] $*"
 }
 
+function warn {
+    echo -e "\[033[0;33mwarn\033[0m] $*"
+}
 function error {
     echo -e "[\033[0;31merror\033[0m] $*"
 }
@@ -28,8 +30,7 @@ function bad_java_prompt {
 }
 
 function interactive_prompt {
-    (>&2 echo -n "$2 [$3]: ")
-    read choice
+    read -e -p "$2 [$3]: " choice
     if [[ "$choice" ]]
     then
         eval "$1=\"$choice\""
@@ -38,15 +39,29 @@ function interactive_prompt {
     fi
 }
 
+if type -p java 1>/dev/null 2>&1
+then
+    # There is a Java at `java`.
+    default_java="$(type -p java)"
+elif [[ -n "${JAVA_HOME}" ]] && [[ -x "${JAVA_HOME}/bin/java" ]]
+then
+    # Java is installed in a directory not on the path.
+    default_java="${JAVA_HOME}/bin/java"
+else
+    # No Java. Let the user figure it out.
+    default_java=""
+fi
+
 # Begin interacting with user to generate runner script.
 info "Getting default values for JAAM runner"
 # Get default values.
 (>&2 echo)
 interactive_prompt jaam_mode "Choose default mode ('user' or 'developer')" "user"
-interactive_prompt jaam_java "Choose default Java" "java"
-interactive_prompt jaam_rt_jar "Choose default rt.jar" "$($FIND_RT_JAR)"
+interactive_prompt jaam_java "Choose default Java" "${default_java}"
+default_rt_jar=$("${jaam_java}" -XshowSettings:properties -version 2<&1 | awk '/rt\.jar/ {print $NF}')
+interactive_prompt jaam_rt_jar "Choose default rt.jar" "$default_rt_jar"
 interactive_prompt jaam_java_opts "Choose default JAVA_OPTS" ""
-interactive_prompt jaam_sbt "Choose default SBT" "${SBT_PATH}"
+interactive_prompt jaam_sbt_opts "Choose default SBT_OPTS (called when invoking \`sbt\`)" "-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
 interactive_prompt jaam_runner "Choose location for jaam.sh runner" "${RUNNER_PATH}"
 (>&2 echo)
 
@@ -54,7 +69,7 @@ info "Default mode: ${jaam_mode}"
 info "Default Java: ${jaam_java}"
 info "Default rt.jar: ${jaam_rt_jar}"
 info "Default JAVA_OPTS: ${jaam_java_opts}"
-info "Default SBT: ${jaam_sbt}"
+info "Default SBT OPTS: ${jaam_sbt_opts}"
 info "JAAM runner path: ${jaam_runner}"
 
 # Check that Java is installed.
@@ -63,29 +78,46 @@ if type -p "${jaam_java}" 1>/dev/null 2>&1
 then
     # Java is installed at `java`.
     _java="$(type -p ${jaam_java})"
-elif [[ -n "${JAVA_HOME}" ]] && [[ -x "${JAVA_HOME}/bin/java" ]]
-then
-    # Java is installed in a directory not on the path.
-    _java="${JAVA_HOME}/bin/java"
 else
     # No Java.
     error "No Java could be found."
     bad_java_prompt
 fi
+success "Java is installed"
 
-# Check that the Java version is correct.
-info "Checking Java version is ${NEED_VERSION}"
-version=$("${_java}" -version 2>&1 | awk -F '"' '/version/ {print $2}' | sed -E 's/([[:digit:]]+\.[[:digit:]]+).*/\1/')
-if [[ "${version}" != "${NEED_VERSION}" ]]
+# Generate "developer-mode" sbt executable
+info "Generating developer-mode sbt executable at ${SBT_PATH}"
+cat <<- EOF > "${SBT_PATH}"
+	#!/bin/bash
+	: \${SBT_JAVA:="${jaam_java}"}
+	: \${SBT_OPTS:="${jaam_sbt_opts}"}
+	"\${SBT_JAVA}" \${SBT_OPTS} -jar "\$(dirname \$0)/sbt-launch.jar" "\$@"
+EOF
+rt=$?
+if [ $rt -eq 0 ]
 then
-    error "Improper version of Java found: ${version}"
-    bad_java_prompt
+    success "Generated SBT runner script"
+else
+    error "Could not generate SBT runner script"
+    exit $rt
 fi
-success "Java is installed and is the correct version"
+
+# Make it executable.
+executify="/bin/chmod +x ${SBT_PATH}"
+$executify >/dev/null 2>&1
+rt=$?
+if [ $rt -eq 0 ]
+then
+    success "$executify"
+else
+    error "$executify"
+    error "To try to solve this problem on your own, execute the following:"
+    error "chmod +x ${SBT_PATH}"
+fi
 
 # Run SBT to set it up and get Scala (as needed).
-info "Bootstrapping SBT/Scala and compiling project"
-cd "${MY_DIR}" && "${SBT_EXEC}" about
+info "Bootstrapping SBT/Scala"
+cd "${MY_DIR}" && "./${SBT_REL_PATH}" about
 
 # Check SBT bootstrapping ran successfully.
 rt=$?
@@ -97,6 +129,35 @@ else
     # Nope.
     error "SBT Bootstrapping failed"
     exit $rt
+fi
+
+# Assemble the rt.jar checker.
+info "Checking rt.jar version"
+exec 5>&1 # Open extra file descriptor to redirect output live while capturing.
+cd "${MY_DIR}" && rtjarcheck_out=$("./${SBT_REL_PATH}" check_rt_jar/assembly | tee /dev/fd/5)
+exec 5>&- # And now close that file descriptor because we like to tidy after ourselves.
+regex="${MY_DIR}.*\.jar"
+if [[ "$(echo "$rtjarcheck_out" | grep -E 'Packaging|Assembly')" =~ (${regex}) ]]
+then
+    rtjarcheck_loc="${BASH_REMATCH[1]}"
+    rtjar_version=$("${jaam_java}" -jar "${rtjarcheck_loc}" "${jaam_rt_jar}" | sed -E 's/([[:digit:]]+\.[[:digit:]]+).*/\1/')
+    if [ $? -ne 0 ]
+    then
+        error "Bad rt.jar file: ${jaam_rt_jar}"
+        jaam_rt_jar=""
+    else
+        # Verify version is correct.
+        if [[ "${rtjar_version}" != "${NEED_VERSION}" ]]
+        then
+            warn "Bad rt.jar file version: ${rtjar_version}"
+            warn "JAAM recommends rt.jar version 1.7 to run"
+        else
+            success "rt.jar is verified correct version"
+        fi
+    fi
+else
+    error "Could not find rt.jar checker."
+    exit 1
 fi
 
 info "Generating JAAM runner script at ${jaam_runner}"
@@ -111,8 +172,24 @@ cat <<- EOF > "${jaam_runner}"
 	: \${JAAM_jar:="\${JAAM_dir}/jaam.jar"}
 	: \${JAAM_java:="${jaam_java}"}
 	: \${JAAM_rt_jar:="${jaam_rt_jar}"}
+	: \${JAAM_rt_jar_version:="${NEED_VERSION}"}
 	: \${JAAM_java_opts:="${jaam_java_opts}"}
 	: \${JAAM_sbt:="${jaam_sbt}"}
+	: \${JAAM_check_rt_jar:="${rtjarcheck_loc}"}
+
+	# Check rt.jar version.
+	if [[ "\${JAAM_check_rt_jar}" ]]
+	then
+	    version=$("\${JAAM_check_rt_jar}" "\${JAAM_rt_jar}")
+	    if [[ "\$version" != "\${JAAM_rt_jar_version}" ]]
+	    then
+	        echo "Bad rt.jar version: \$version"
+	        echo "Continuing..."
+	    fi
+	else
+	    echo "No rt.jar checker."
+	    exit 1
+	fi
 	
 	# Check for JAVA_OPTS (don't want to override it).
 	if [[ "\$JAVA_OPTS" ]]
@@ -131,7 +208,7 @@ cat <<- EOF > "${jaam_runner}"
 	    exec "\${execute_java_opts}\${JAAM_java}" -jar "\${JAAM_jar}" "\$@"
 	elif [[ "\$JAAM_mode" == "developer" ]]
 	then
-	    exec "\${execute_java_opts}\${JAAM_sbt}" "run \$*"
+	    exec "SBT_JAVA=\"\${JAAM_java}\" \${execute_java_opts}\${JAAM_sbt}" "run \$*"
 	else
 	    echo "Error: Invalid mode set: \$JAAM_mode"
 	    exit 1
